--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Little Lemon</title>
+    <meta name="description" content="little lemon restaurent website" />
+    <meta name="og:title" content="little lemon restaurant" />
+    <meta name="og:description" content="which is based in Chicago." />
+    <meta name="og:image" content="restauranfood.jpg" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
