--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <meta name="description" content="little lemon restaurent website" />
     <meta name="og:title" content="little lemon restaurant" />
     <meta name="og:description" content="which is based in Chicago." />
-    <meta name="og:image" content="restauranfood.jpg" />
+    <meta name="og:image" content="%PUBLIC_URL%/restauranfood.jpg" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
